# ToyCCompiler

./: .gitignore  CMakeLists.txt  ReadMe.md  codegen.cc  codegen.h  function.cc  function.h  main.cc  node.cc  node.h  object.cc  object.h  parser.cc  test.sh  test_drivers.sh  test_function.sh  token.cc  token.h  tools.cc  tools.h  type.cc  type.h  utils.h  var.cc  var.h
.github/workflows/: cmake-multi-platform.yml
.vscode /: settings.json
include/: node.h  token.h  tools.h  utils.h
src/: codegen.cc  codegen.h  context.h  main.cc  node.cc  node.h  object.cc  object.h  parser.cc  parser.h  scope.cc  scope.h  struct.cc  struct.h  token.cc  token.h  tools.cc  tools.h  type.cc  type.h  utils.h
test/: arith.c  control.c  decl.c  drivers.sh  function.c  function.sh  sizeof.c  struct.c  test.h  union.c  usualconv.c  variable.c
test/script/: asm_function.sh  drivers.sh  function.sh  memory.sh  preprocessing.sh
test/src/: decl.c  pointer.c  string.c
test/src/asm/: arith  cast.s  constexpr  control.s  decl.s  enum.s  function  literal  pointer.s  sizeof.s  string.s  struct.s  typedef  union.s  usualconv  variable
test/src/c/: cast.c  function.c  union.c
